--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/styles.css" />
+    <title>Rivals DB</title>
   </head>
   <body>
     <script src="/dist/elm.js"></script>
