--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
       fetch("/cards.json")
         .then((response) => response.json())
         .then((cards) => {
-          Elm.Main.init({ flags: cards })
+          Elm.Main.init({ flags: cards });
         });
     </script>
   </body>
