--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/styles.css" />
     <title>Rivals DB</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-906NFRKXQS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-906NFRKXQS');
+    </script>
   </head>
   <body>
     <script src="/dist/elm.js"></script>
