--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,8 @@
     <title>Rivals DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <script type="module" src="app.ts"></script>
+    <script type="module" src="main.ts"></script>
+    <meta name="theme-color" content="#e4edf2">
   </head>
   <body>
   </body>
