--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <title>Rivals DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="main.ts"></script>
-    <meta name="theme-color" content="#e4edf2">
+    <meta name="theme-color" content="#0F1B26">
   </head>
   <body>
   </body>
