--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <title>Rivals DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg">
+    <link rel="icon" type="image/png" href="../../assets/favicon.png">
     <script type="module" src="main.ts"></script>
     <meta name="theme-color" content="#0F1B26">
   </head>
