--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg">
     <link rel="icon" type="image/png" href="../../assets/favicon.png">
-    <script type="module" src="main.ts"></script>
+    <script type="module" src="./_JS/main.ts"></script>
     <meta name="theme-color" content="#0F1B26">
   </head>
   <body>
