--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="../../assets/favicon.png">
     <script type="module" src="./_JS/main.ts"></script>
     <meta name="theme-color" content="#0F1B26">
+    <script defer data-domain="rivalsdb.app" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
   </body>
