--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="./_JS/main.ts"></script>
     <meta name="theme-color" content="#0F1B26">
     <script defer data-domain="rivalsdb.app" src="https://plausible.io/js/plausible.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
   </head>
   <body>
   </body>
