Analytics using plausible npm package

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,16 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Rivals DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg">
-    <link rel="icon" type="image/png" href="../../assets/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg" />
+    <link rel="icon" type="image/png" href="../../assets/favicon.png" />
     <script type="module" src="./_JS/main.ts"></script>
-    <meta name="theme-color" content="#0F1B26">
-    <script defer data-domain="rivalsdb.app" src="https://plausible.io/js/plausible.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    <meta name="theme-color" content="#0F1B26" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
