Add patreon button to footer

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,5 +21,7 @@
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://www.rivalsdb.app/logo/og-image-20220213.png"/>
+    <script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
   <body></body>
+
 </html>
