--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Rivals DB - A deckbuilder for Vampire: The Masquerade Rivals</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg" />
-    <link rel="icon" type="image/png" href="../../assets/favicon.png" />
-    <script type="module" src="./_JS/main.ts"></script>
-    <meta name="theme-color" content="#0F1B26" />
-    <meta
-      name="description"
-      content="Rivals DB is a deckbuilder and card database for Vampire: The Masquerade Rivals Expandable Card Game."
-    />
-    <meta property="og:title" content="Rivals DB" />
-    <meta property="og:url" content="https://www.rivalsdb.app" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Rivals DB is a deckbuilder and card database for Vampire: The Masquerade Rivals Expandable Card Game."
-    />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://www.rivalsdb.app/logo/og-image-20220213.png"/>
-  <body></body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Rivals DB - A deckbuilder for Vampire: The Masquerade Rivals</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="../../assets/favicon.svg" />
+  <link rel="icon" type="image/png" href="../../assets/favicon.png" />
+  <script type="module" src="./_JS/main.ts"></script>
+  <meta name="theme-color" content="#0F1B26" />
+  <meta name="description"
+    content="Rivals DB is a deckbuilder and card database for Vampire: The Masquerade Rivals Expandable Card Game." />
+  <meta property="og:title" content="Rivals DB" />
+  <meta property="og:url" content="https://www.rivalsdb.app" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description"
+    content="Rivals DB is a deckbuilder and card database for Vampire: The Masquerade Rivals Expandable Card Game." />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="https://www.rivalsdb.app/logo/og-image-20220213.png" />
+
+<body></body>
 
 </html>
